# AIAgentReady

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/adr/: 0001-python-stack.md
mcp-git-intelligence/: README.md
openspec/changes/archive/2026-07-09-phase-0-bootstrap/specs/python-packaging/: spec.md
openspec/changes/phase-0-bootstrap/: design.md  proposal.md  tasks.md
openspec/changes/phase-0-bootstrap/specs/repo-structure/: spec.md
openspec/changes/phase-1-edx-pilot/: design.md  proposal.md  tasks.md
openspec/changes/phase-1-edx-pilot/specs/pilot-deliverables/: spec.md
openspec/changes/phase-1-edx-pilot/specs/pilot-measurements/: spec.md
openspec/changes/team-workflow/: design.md  proposal.md  tasks.md
openspec/changes/team-workflow/specs/contribution-workflow/: spec.md
openspec/changes/validation-rubric/: design.md  proposal.md  tasks.md
openspec/changes/validation-rubric/specs/validation-rubric/: spec.md
openspec/specs/contribution-workflow/: spec.md
openspec/specs/python-packaging/: spec.md
openspec/specs/repo-structure/: spec.md
pilots/edx-platform/: README.md
src/aiagentready/: __init__.py
src/aiagentready/analyzer/: __init__.py
src/aiagentready/generators/: __init__.py
src/aiagentready/grounding/: __init__.py
src/aiagentready/validation/: __init__.py
templates/: README.md
templates/validation/: before-after-table.md  example-edx-platform.md  questions.md  rubric.md
tests/: test_smoke.py
