[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiagentready"
version = "0.0.1"
description = "AI-Aware Repo Onboarding Kit — converts a legacy repository into an AI-aware repository via a single reviewable PR"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Arbisoft" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/awais786/AIAgentReady"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aiagentready"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
